--- a/views/partials/products.ejs
+++ b/views/partials/products.ejs
@@ -5,7 +5,7 @@
         <% products.forEach(product=>{ %> 
         <div class="col-md-3">
           <div class="card" style="width: 18rem;">
-            <img src="<%= product.imageAddress %>" class="card-img-top" alt="...">
+            <img src="<%= product.imageAddress %>" height="300rem" class="card-img-top p-2" alt="...">
             <div class="card-body">
               <h5 class="card-title"><%= product.name %></h5>
               <p class="card-text"><%= product.brand %></p>
